[package]
name = "spire_rogue"
version = "0.1.0"
authors = ["Raymond Ng <raymondng@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1", features = ["serde"] }
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
rand = "0.7.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.39"

[patch.crates-io]
bracket-algorithm-traits = { git = "https://github.com/thebracket/bracket-lib" }
bracket-geometry = { git = "https://github.com/thebracket/bracket-lib" }